--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@ body {
     <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/"><img src="entretien.png" alt="Entretien"></a>
     <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
     <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
-    <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
+    <a class="btn" href="construction.html"><img src="informations.png" alt="Informations"></a>
     <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
     <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
-    <a class="btn" href="construction.png"><img src="book.png" alt="Book"></a>
-    <a class="btn" href="construction.png"><img src="galerie.png" alt="Galerie"></a>
-    <a class="btn" href="construction.png"><img src="admin.png" alt="Admin"></a>
-    <a class="btn" href="construction.png"><img src="gardes postées.png" alt="Gardes postées"></a>
-    <a class="btn" href="construction.png"><img src="tickets carburant.png" alt="Tickets carburant"></a>
-    <a class="btn" href="construction.png"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
+    <a class="btn" href="construction.html"><img src="book.png" alt="Book"></a>
+    <a class="btn" href="construction.html"><img src="galerie.png" alt="Galerie"></a>
+    <a class="btn" href="construction.html"><img src="admin.png" alt="Admin"></a>
+    <a class="btn" href="construction.html"><img src="gardes postées.png" alt="Gardes postées"></a>
+    <a class="btn" href="construction.html"><img src="tickets carburant.png" alt="Tickets carburant"></a>
+    <a class="btn" href="construction.html"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
   </section>
 
   <div style="margin:30px 0; text-align:center;">
