--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body {
     <a class="btn" href="construction.html"><img src="admin.png" alt="Admin"></a>
     <a class="btn" href="construction.html"><img src="gardes postées.png" alt="Gardes postées"></a>
     <a class="btn" href="construction.html"><img src="tickets carburant.png" alt="Tickets carburant"></a>
-    <a class="btn" href="construction.html"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
+    <a class="btn" href="desinfection-vsav.html"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
   </section>
 
   <!-- ✅ MODIF: SUPPRIMÉ le bouton du bas -->
