--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -422,6 +422,69 @@ function setTab(which){
 }
 tabIns.addEventListener("click", ()=>setTab("ins"));
 tabInv.addEventListener("click", ()=>setTab("inv"));
+  <script>
+/* =======================
+   VSAV — CHARGEMENT API
+   ======================= */
+const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec"; // <-- URL /exec Apps Script
+
+function jsonp(url, cbName, timeoutMs=12000){
+  return new Promise((resolve, reject)=>{
+    const s = document.createElement("script");
+    const cleanup = ()=>{
+      s.remove();
+      try{ delete window[cbName]; }catch(e){ window[cbName]=undefined; }
+    };
+    const t = setTimeout(()=>{ cleanup(); reject(new Error("Timeout JSONP")); }, timeoutMs);
+    window[cbName] = (data)=>{ clearTimeout(t); cleanup(); resolve(data); };
+    s.src = url + (url.includes("?") ? "&" : "?") + "_t=" + Date.now();
+    s.onerror = ()=>{ clearTimeout(t); cleanup(); reject(new Error("Erreur JSONP")); };
+    document.head.appendChild(s);
+  });
+}
+
+async function loadVsav(){
+  const cb = "cb_vsav_" + Math.random().toString(36).slice(2);
+  const url = `${API}?view=vsav_get&nocache=1&callback=${cb}`;
+  return await jsonp(url, cb, 15000);
+}
+
+/* Remplit les 12 lignes fixes du tableau (référent / agent / date) */
+function fillVsavTable(rows){
+  const tbody = document.getElementById("tbody");
+  if(!tbody) return;
+
+  for(let i=0; i<12; i++){
+    const tr = tbody.children[i];
+    if(!tr) continue;
+
+    const r = rows && rows[i] ? rows[i] : [];
+
+    const referent = (r[1] ?? "").toString().trim();
+    const agent = (r[2] ?? "").toString().trim();
+    const dateVal = (r[3] ?? "").toString().trim();
+
+    // colonnes: 0=mois (déjà écrit), 1=référent, 2=agent, 3=date
+    tr.children[1].textContent = referent || "—";
+    const spanAgent = tr.children[2].querySelector(".fakeSelect span");
+    if(spanAgent) spanAgent.textContent = agent || "—";
+    tr.children[3].textContent = dateVal || "—";
+  }
+}
+
+/* BOOT */
+(async function(){
+  try{
+    const res = await loadVsav();
+    if(res && res.ok){
+      fillVsavTable(res.rows || []);
+    }
+  }catch(e){
+    // si l’API plante, on garde les "—" (pas de crash)
+  }
+})();
+</script>
+
 </script>
 </body>
 </html>
